Fixed hyphens on firefox

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,12 @@ body {
   word-break: break-word;
 }
 
+@-moz-document url-prefix() {
+    html, body {
+        word-break: normal!important;
+    }
+ }
+
 a {
   color: inherit;
   text-decoration: none;
